[package]
name = "indasocial-biblioteca"
version = "0.1.0"
description = "Biblioteca de artículos on-chain para la comunidad IndaSOCIAL"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "indasocial_biblioteca"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
